RESOLVED FIXED262713
REGRESSION(268913@main) clang requires std namespace for nullptr_t
https://bugs.webkit.org/show_bug.cgi?id=262713
Summary REGRESSION(268913@main) clang requires std namespace for nullptr_t
Lauro Moura
Reported 2023-10-05 11:56:33 PDT
SSIA Example: https://godbolt.org/z/dz75q7h6T Patch incoming.
Attachments
Lauro Moura
Comment 1 2023-10-05 11:57:31 PDT
Sample error message in WPE build (for reference) In file included from /app/webkit/Source/WTF/wtf/NativePromise.cpp:27: /app/webkit/Source/WTF/wtf/NativePromise.h:892:78: error: use of undeclared identifier 'nullptr_t'; did you mean 'std::nullptr_t'? return invokeWithVoidOrWithArg(WTFMove(resolveFunction), nullptr_t()); ^ /usr/lib/gcc/x86_64-unknown-linux-gnu/12.2.0/../../../../include/c++/12.2.0/x86_64-unknown-linux-gnu/bits/c++config.h:302:29: note: 'std::nullptr_t' declared here typedef decltype(nullptr) nullptr_t; ^ In file included from /app/webkit/Source/WTF/wtf/NativePromise.cpp:27: /app/webkit/Source/WTF/wtf/NativePromise.h:913:82: error: use of undeclared identifier 'nullptr_t'; did you mean 'std::nullptr_t'? return invokeWithVoidOrWithArg(thisVal.get(), resolveMethod, nullptr_t()); ^ /usr/lib/gcc/x86_64-unknown-linux-gnu/12.2.0/../../../../include/c++/12.2.0/x86_64-unknown-linux-gnu/bits/c++config.h:302:29: note: 'std::nullptr_t' declared here typedef decltype(nullptr) nullptr_t; ^ 2 errors generated.
Lauro Moura
Comment 2 2023-10-05 12:03:11 PDT
EWS
Comment 3 2023-10-05 17:25:50 PDT
Committed 268954@main (e8659754092e): <https://commits.webkit.org/268954@main> Reviewed commits have been landed. Closing PR #18708 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2023-10-05 17:26:22 PDT
Note You need to log in before you can comment on or make changes to this bug.