REGRESSION(268913@main) clang requires std namespace for nullptr_t https://bugs.webkit.org/show_bug.cgi?id=262713

Reviewed by Fujii Hironori.

* Source/WTF/wtf/NativePromise.h: Add missing namespace.

Canonical link: https://commits.webkit.org/268954@main